name:                users-persistent
version:             0.5.0.2
synopsis:            A persistent backend for the users package
description:         This library is a backend driver using <http://hackage.haskell.org/package/persistent persistent> for
                     <http://hackage.haskell.org/package/users the "users" library>.
                     .
                     The package itself does not expose any bindings but provides an instance for 'UserStorageBackend'.
                     .
                     Usage:
                     .
                     > module Foo where
                     > import Web.Users.Types
                     > import Web.Users.Persistent
                     > -- code goes here
homepage:            https://github.com/agrafix/users
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann
category:            Data
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/agrafix/users.git

library
  exposed-modules:     Web.Users.Persistent
                       Web.Users.Persistent.Definitions
  build-depends:       base >=4.6 && <5,
                       persistent >=2.0,
                       persistent-template >=2.1,
                       esqueleto >=2.1,
                       users >=0.5,
                       transformers >=0.4,
                       mtl >=2.1,
                       time >=1.4,
                       bytestring >=0.10,
                       text >=1.2,
                       uuid >=1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -auto-all -Wall -fno-warn-orphans

test-suite users-persistent-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                       base >=4.6 && <5,
                       hspec >=2.1,
                       persistent-sqlite >=2.1,
                       monad-logger >=0.3,
                       temporary >=1.0,
                       text,
                       users-persistent,
                       users-test
  ghc-options:         -auto-all -Wall -fno-warn-orphans
  default-language:    Haskell2010
