name:                users-postgresql-simple
version:             0.5.0.2
synopsis:            A PostgreSQL backend for the users package
description:         This library is a backend driver using <http://hackage.haskell.org/package/postgresql-simple postgresql-simple> for
                     <http://hackage.haskell.org/package/users the "users" library>.
                     .
                     It supports all postgres versions starting from 8.3 and requires the included extensions uuid-ossp.
                     .
                     The package itself does not expose any bindings but provides an instance for 'UserStorageBackend'.
                     .
                     Usage:
                     .
                     > module Foo where
                     > import Web.Users.Types
                     > import Web.Users.Postgresql ()
                     > -- code goes here
homepage:            https://github.com/agrafix/users
bug-reports:         https://github.com/agrafix/users/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/agrafix/users.git

library
  exposed-modules:     Web.Users.Postgresql
  build-depends:
                       base >=4.6 && <5,
                       users >=0.5.0.0,
                       postgresql-simple >=0.4,
                       text >=1.2,
                       mtl >=2.1,
                       uuid >=1.3,
                       bytestring >=0.10,
                       time >=1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -auto-all -Wall -fno-warn-orphans

test-suite users-postgresql-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                       base >=4.6 && <5,
                       hspec >=2.1,
                       postgresql-simple,
                       users-postgresql-simple,
                       users-test
  ghc-options:         -auto-all -Wall -fno-warn-orphans
  default-language:    Haskell2010
