name:                users-test
version:             0.5.0.1
synopsis:            Library to test backends for the users library
description:         Provides HSpec helpers for backends of <http://hackage.haskell.org/package/users users package>.
                     .
                     All backend packages should conform to this specification.
homepage:            https://github.com/agrafix/users
bug-reports:         https://github.com/agrafix/users/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/agrafix/users.git


library
  exposed-modules:     Web.Users.TestSpec
  build-depends:
                       base >=4.6 && <5,
                       hspec >=2.1,
                       users >=0.5.0.0,
                       text >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -auto-all -Wall -fno-warn-orphans
