name:                users
version:             0.5.0.0
synopsis:            A library simplifying user management for web applications
description:         Scrap the boilerplate for managing user accounts in web applications
                     .
                     Features:
                     .
                     * Easy to understand API
                     .
                     * CRUD for Users
                     .
                     * Session Management
                     .
                     * Password reset functionality
                     .
                     * Activation functionality
                     .
                     Current Backends:
                     .
                     * <http://hackage.haskell.org/package/users-postgresql-simple PostgreSQL-Simple Backend>
                     .
                     * <http://hackage.haskell.org/package/users-persistent Persistent Backend>
                     .
homepage:            https://github.com/agrafix/users
bug-reports:         https://github.com/agrafix/users/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          Alexander Thiemann <mail@athiemann.net>
copyright:           (c) 2015 - 2016 Alexander Thiemann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/agrafix/users.git

library
  exposed-modules:     Web.Users.Types
  build-depends:
                       aeson >=0.7,
                       base >=4.6 && <5,
                       bcrypt >=0.0.8,
                       path-pieces >=0.1,
                       text >=1.2,
                       time >=1.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -auto-all -Wall -fno-warn-orphans
